# CIVILTAS

./: .gitignore  DEVELOPMENT.md  README.md  civiltas.py  package.json  pyproject.toml  requirements-dev.txt  tests.py
.github/workflows/: blank.yml
app/: globals.css  layout.tsx  page.tsx
app/api/ai/chat/: route.ts
components/dashboard/: admin-dashboard.tsx  bug-report-dialog.tsx  pricing-dialog.tsx  project-dashboard.tsx  settings-dialog.tsx
components/editor/: ai-chat.tsx  code-editor.tsx  diff-viewer.tsx  editor-tabs.tsx  editor-workspace.tsx  file-tree.tsx  git-panel.tsx
components/pwa/: install-prompt.tsx
game/: __init__.py  buildings.py  display.py  enlightenment.py  population.py  resources.py  state.py
lib/: db.ts
public/: manifest.json  sw.js
site/: index.html
